--- a/common/geometry_utils/CMakeLists.txt
+++ b/common/geometry_utils/CMakeLists.txt
@@ -103,7 +103,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include include/geometry_utils
-#  LIBRARIES geometry_utils
+  LIBRARIES geometry_utils
   CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
