--- a/navigation/path_finder/package.xml
+++ b/navigation/path_finder/package.xml
@@ -49,6 +49,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>occupancy_grid_utils</build_depend>
   <build_depend>common_utils</build_depend>
+  <build_depend>deplacement_msg</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
@@ -59,6 +60,7 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>occupancy_grid_utils</run_depend>
   <run_depend>common_utils</run_depend>
+  <run_depend>deplacement_msg</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
