Création de classes Modifier pour appliquer des changements à une gridMap. L'ajout de poids dégradés autour des objets de la gridMap utilise maintenant ces classes. Les dégradés sont maintenant paramétrés via le fichier de configuration de la map.

--- a/common/occupancy_grid_utils/CMakeLists.txt
+++ b/common/occupancy_grid_utils/CMakeLists.txt
@@ -130,6 +130,8 @@ add_library(occupancy_grid_utils
    src/shape/Circle.cpp
    src/shape/Line.cpp
    src/shape/LineSegment.cpp
+   src/grid_modifier/BasicGradientModifier.cpp
+   src/grid_modifier/FastGradientModifier.cpp
 )
 
 ## Add cmake target dependencies of the library
