--- a/navigation/grid_maker/cfg/field.yaml
+++ b/navigation/grid_maker/cfg/field.yaml
@@ -5,6 +5,9 @@ field:
     origin: [-7, -2, 0.0]
     resolution: 0.05
     margin: 0.3
+    gradient:
+        distance: 0.5
+        minValue: 0
     walls:
         bottom1:
             start: [-6, 0, 0.0]
