--- a/navigation/grid_maker/cfg/field_D336.yaml
+++ b/navigation/grid_maker/cfg/field_D336.yaml
@@ -5,6 +5,9 @@ field:
     origin: [-1, -2, 0.0]
     resolution: 0.05
     margin: 0.25
+    gradient:
+        distance: 0.5
+        minValue: 0
     walls:
         bottom1:
             start: [0, 0, 0.0]
