--- a/messages/gripper_msg/CMakeLists.txt
+++ b/messages/gripper_msg/CMakeLists.txt
@@ -53,7 +53,8 @@ add_message_files(
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  SetGripper.srv
+  Take.srv
+  Release.srv
 )
 
 ## Generate actions in the 'action' folder
