--- a/navigation/approche_finale/CMakeLists.txt
+++ b/navigation/approche_finale/CMakeLists.txt
@@ -29,75 +29,9 @@ endif(NOT ${CLANGPP} MATCHES "CLANGPP-NOTFOUND")
 message(STATUS "Compiler : ${CMAKE_CXX_COMPILER}")
 message(STATUS "Found : ${CLANGPP}")
 
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
-
 ###################################
 ## catkin specific configuration ##
 ###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if you package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 	INCLUDE_DIRS include
 	LIBRARIES approche_finale
@@ -109,7 +43,7 @@ catkin_package(
 ## Build ##
 ###########
 
-# finalApproaching_node
+## FinalApproaching_node
 add_executable(finalApproaching_node 
 	src/fa_utils.cpp
 	src/laserScan.cpp
@@ -121,38 +55,59 @@ add_executable(finalApproaching_node
 	src/odomFA.cpp
 	src/sharps.cpp
 	src/gameStateFA.cpp
-	src/finalApproaching_node.cpp)
-target_link_libraries(  finalApproaching_node  ${catkin_LIBRARIES})
-add_dependencies(  finalApproaching_node  ${manager_msg_EXPORTED_TARGETS} approche_finale_msg_gencpp comm_msg_gencpp manager_msg_gencpp)
-set_target_properties(finalApproaching_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
+	src/finalApproaching_node.cpp
+)
+target_link_libraries(finalApproaching_node
+	${catkin_LIBRARIES}
+)
+add_dependencies(finalApproaching_node
+	${manager_msg_EXPORTED_TARGETS}
+	approche_finale_msg_gencpp
+	comm_msg_gencpp
+	manager_msg_gencpp
+)
+set_target_properties(finalApproaching_node
+	PROPERTIES COMPILE_FLAGS "-g3 -std=c++11"
+)
 
 
 # Mocked final approach (work on simulation, with mocked machine detection)
 add_executable(simFinalApproach_node 
 	src/simFinalApproach_node.cpp
 	src/SimFinalApproach.cpp
-	src/odomFA.cpp)
-
+	src/odomFA.cpp
+)
 target_link_libraries(simFinalApproach_node
-	${catkin_LIBRARIES})
-
+	${catkin_LIBRARIES}
+)
 add_dependencies(simFinalApproach_node
 	deplacement_msg_gencpp
-	manager_msg_gencpp)
-
+	manager_msg_gencpp
+)
 set_target_properties(simFinalApproach_node
 	PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
 
 
-# fake_scan_cyril_node
+# Fake_scan_cyril_node
 add_executable(fake_scan_cyril_node
-	src/fake_scan_node.cpp)
-target_link_libraries(  fake_scan_cyril_node  ${catkin_LIBRARIES})
-set_target_properties(fake_scan_cyril_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
+	src/fake_scan_node.cpp
+)
+target_link_libraries(
+	fake_scan_cyril_node
+	${catkin_LIBRARIES}
+)
+set_target_properties(fake_scan_cyril_node
+	PROPERTIES COMPILE_FLAG
+	"-g3 -std=c++11"
+)
 
+# AR Tag reader node
 add_executable(ar_tag_reader_node
-	src/ar_tag_reader_node.cpp)
-target_link_libraries( ar_tag_reader_node ${catkin_LIBRARIES})
+	src/ar_tag_reader_node.cpp
+)
+target_link_libraries(ar_tag_reader_node
+	${catkin_LIBRARIES}
+)
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
@@ -162,67 +117,14 @@ include_directories(
 	include/approche_finale
 )
 
-## Declare a cpp library
-# add_library(approche_finale
-#   src/${PROJECT_NAME}/approche_finale.cpp
-# )
-
-## Declare a cpp executable
-# add_executable(approche_finale_node src/approche_finale_node.cpp)
-
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-# add_dependencies(approche_finale_node approche_finale_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(approche_finale_node
-#   ${catkin_LIBRARIES}
-# )
-
 #############
 ## Install ##
 #############
 
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables and/or libraries for installation
-# install(TARGETS approche_finale approche_finale_node
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
 ## Mark cpp header files for installation
- install(DIRECTORY include/${PROJECT_NAME}/
-	 DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-	 FILES_MATCHING PATTERN "*.h"
-	 PATTERN ".svn" EXCLUDE
- )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_approche_finale.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+install(
+	DIRECTORY include/${PROJECT_NAME}/
+	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+	FILES_MATCHING PATTERN "*.h"
+	PATTERN ".svn" EXCLUDE
+)
