--- a/common/laser_utils/package.xml
+++ b/common/laser_utils/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The laser_utils package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="vincent@todo.todo">vincent</maintainer>
@@ -55,6 +55,6 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <pluginlib_tutorials plugin="${prefix}/laser_utils_plugins.xml"/>
   </export>
 </package>
