--- a/navigation/approche_finale/package.xml
+++ b/navigation/approche_finale/package.xml
@@ -55,6 +55,7 @@
   <build_depend>ar_track_alvar_msgs</build_depend>  
   <build_depend>trait_im_msg</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
  
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -70,6 +71,7 @@
   <run_depend>ar_track_alvar_msgs</run_depend>
   <run_depend>trait_im_msg</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
