--- a/common/occupancy_grid_utils/CMakeLists.txt
+++ b/common/occupancy_grid_utils/CMakeLists.txt
@@ -130,6 +130,7 @@ add_library(occupancy_grid_utils
    src/shape/Circle.cpp
    src/shape/Line.cpp
    src/shape/LineSegment.cpp
+   src/shape/Paraboloid.cpp
    src/grid_modifier/BasicGradientModifier.cpp
    src/grid_modifier/FastGradientModifier.cpp
 )
