--- a/messages/deplacement_msg/package.xml
+++ b/messages/deplacement_msg/package.xml
@@ -2,12 +2,12 @@
 <package>
   <name>deplacement_msg</name>
   <version>0.0.0</version>
-  <description> 
+  <description>
     Package de messages/services/action pour navigation de la Robocup Logistic League
     Equipe PYRO (PolYtech RObocup team)
   </description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="thomas.danel@polytech-lille.net">Thomas Danel</maintainer>
@@ -44,13 +44,14 @@
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
 
-  
   <!-- Use run_depend for packages you need at runtime: -->
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  
+  <run_depend>nav_msgs</run_depend>
+
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
 
