--- a/messages/final_approach_msg/package.xml
+++ b/messages/final_approach_msg/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>approche_finale</name>
+  <name>final_approach_msg</name>
   <version>0.0.0</version>
-  <description>The approche_finale package</description>
+  <description>The final_approach_msg package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="cyril.smagghe@polytech-lille.net">cyril</maintainer>
+  <maintainer email="cyril@todo.todo">cyril</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/approche_finale</url> -->
+  <!-- <url type="website">http://wiki.ros.org/final_approach_msg</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,38 +40,18 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>message_runtime</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>manager_msg</build_depend>
-  <build_depend>ar_track_alvar</build_depend>
-  <build_depend>ar_track_alvar_msgs</build_depend>  
-  <build_depend>trait_im_msg</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>visualization_msgs</build_depend>
- 
+  <build_depend>actionlib_msgs</build_depend>
+
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
-  <run_depend>sensor_msgs</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>message_generation</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>manager_msg</run_depend>
-  <run_depend>ar_track_alvar</run_depend>
-  <run_depend>ar_track_alvar_msgs</run_depend>
-  <run_depend>trait_im_msg</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
+
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
