Correction de la phase d'approche par ArTag

--- a/navigation/final_approach/cfg/custom_rosconsole.conf
+++ b/navigation/final_approach/cfg/custom_rosconsole.conf
@@ -1,2 +1,4 @@
 # Override my package to output everything
 log4j.logger.ros.final_approach=DEBUG
+log4j.logger.ros.final_approach.investigation=INFO
+log4j.logger.ros.final_approach.artag=DEBUG
