Changement de quelques ROS_LOG

--- a/navigation/final_approach/cfg/custom_rosconsole.conf
+++ b/navigation/final_approach/cfg/custom_rosconsole.conf
@@ -1,4 +1,6 @@
 # Override my package to output everything
-log4j.logger.ros.final_approach=DEBUG
-log4j.logger.ros.final_approach.investigation=INFO
-log4j.logger.ros.final_approach.artag=DEBUG
+log4j.logger.ros.final_approach = DEBUG
+log4j.logger.ros.final_approach.investigation = INFO
+log4j.logger.ros.final_approach.artag = DEBUG
+log4j.logger.ros.final_approach.actionlib = WARN
+log4j.logger.ros.final_approach.segmentsConstrutcion = INFO
