Ajout des Parameter. Pas d'ajout des PID

--- a/navigation/final_approach/CMakeLists.txt
+++ b/navigation/final_approach/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
 	trait_im_msg
 	nav_msgs
 	visualization_msgs
+	common_utils
 )
 
 # Use clang++-3.6 if available
