--- a/navigation/final_approach/package.xml
+++ b/navigation/final_approach/package.xml
@@ -56,6 +56,7 @@
   <build_depend>trait_im_msg</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>common_utils</build_depend>
  
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -72,6 +73,7 @@
   <run_depend>trait_im_msg</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>common_utils</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
