--- a/navigation/final_approach/cfg/custom_rosconsole.conf
+++ b/navigation/final_approach/cfg/custom_rosconsole.conf
@@ -3,4 +3,5 @@ log4j.logger.ros.final_approach = DEBUG
 log4j.logger.ros.final_approach.investigation = INFO
 log4j.logger.ros.final_approach.artag = DEBUG
 log4j.logger.ros.final_approach.actionlib = WARN
-log4j.logger.ros.final_approach.segmentsConstrutcion = INFO
+log4j.logger.ros.final_approach.segmentConstrutcion = INFO
+log4j.logger.ros.final_approach.objectsConstruction = INFO
