--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -58,7 +58,7 @@ FILES
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  Alarm.srv
+  ClosestReachablePoint.srv
 )
 
 ## Generate actions in the 'action' folder
