Ajout navigation-devel à CI-Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ branches:
     - /bob.*/
     - /stuart.*/
     - /.*\/ci-travis\/.*/
+    - navigation-devel
 
 # Allow catkin_make to be ran
 language:
