--- a/navigation/path_finder/CMakeLists.txt
+++ b/navigation/path_finder/CMakeLists.txt
@@ -108,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include include/path_finder
 #  LIBRARIES path_finder
-  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs deplacement_msg actionlib_msgs actionlib
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs deplacement_msg actionlib_msgs actionlib occupancy_grid_utils
 #  DEPENDS system_lib
 )
 
