--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -48,6 +48,7 @@
   <build_depend>manager_msg</build_depend>
   <build_depend>comm_msg</build_depend>
   <build_depend>deplacement_msg</build_depend>
+  <build_depend>common_utils</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -56,6 +57,7 @@
   <run_depend>manager_msg</run_depend>
   <run_depend>comm_msg</run_depend>
   <run_depend>deplacement_msg</run_depend>
+  <run_depend>common_utils</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
