Prise en compte des remarques Bug sur path_tracker_test_node.py dans la fonction odomCallback (transformPose) Le robot fait n'importe quoi

--- a/navigation/grid_localization/CMakeLists.txt
+++ b/navigation/grid_localization/CMakeLists.txt
@@ -6,8 +6,8 @@ project(grid_localization)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
-  mrpt_localization
-  mrpt_msgs
+#  mrpt_localization
+#  mrpt_msgs
   nav_msgs
   roscpp
   rospy
