--- a/messages/deplacement_msg/package.xml
+++ b/messages/deplacement_msg/package.xml
@@ -45,12 +45,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>comm_msg</build_depend>
 
   <!-- Use run_depend for packages you need at runtime: -->
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
+  <run_depend>comm_msg</run_depend>
 
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
