Traitement d'image méthode ROIs. Première version fonctionnelle

--- a/traitement_image/feu_tricolore/cfg/custom_rosconsole.conf
+++ b/traitement_image/feu_tricolore/cfg/custom_rosconsole.conf
@@ -1,2 +1,4 @@
 # Override my package to output everything
-log4j.logger.ros.lecture_feu_node = INFO
+log4j.logger.ros.feu_tricolore = DEBUG
+log4j.logger.ros.feu_tricolore.roi = DEBUG
+log4j.logger.ros.feu_tricolore.actionlib = INFO
