--- a/traitement_image/feu_tricolore/package.xml
+++ b/traitement_image/feu_tricolore/package.xml
@@ -45,12 +45,14 @@
   <build_depend>roscpp</build_depend>
   <build_depend>trait_im_msg</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>common_utils</build_depend>
 
   <!-- Use run_depend for packages you need at runtime: -->
   <!--   <run_depend>message_runtime</run_depend> -->
   <run_depend>roscpp</run_depend>
   <run_depend>trait_im_msg</run_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>common_utils</build_depend>
 
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
