--- a/traitement_image/feu_tricolore/param/roi.yaml
+++ b/traitement_image/feu_tricolore/param/roi.yaml
@@ -1,17 +1,17 @@
 computerVision:
-	lightSignalDetection:
-		greenRoi:
-			xmin:
-			xmax:
-			ymin:
-			ymax:
-		yellowRoi:
-			xmin:
-			xmax:
-			ymin:
-			ymax:
-		redRoi:
-			xmin:
-			xmax:
-			ymin:
-			ymax:
+  lightSignalDetection:
+    greenRoi:
+      xmin: 0.2
+      xmax: 0.4
+      ymin: 0.52
+      ymax: 0.60
+    yellowRoi:
+      xmin: 0.2
+      xmax: 0.4
+      ymin: 0.35
+      ymax: 0.50
+    redRoi:
+      xmin: 0.2
+      xmax: 0.4
+      ymin: 0.2
+      ymax: 0.33
