--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   occupancy_grid_utils
+  deplacement_msg
 )
 
 ## System dependencies are found with CMake's conventions
