--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -124,7 +124,7 @@ include_directories(
 add_library(common_utils
   src/parameterFunctions.cpp
   src/Parameter.cpp
-  src/Pid.cpp
+  src/controller/Pid.cpp
 )
 
 ## Add cmake target dependencies of the library
