--- a/navigation/path_tracker/package.xml
+++ b/navigation/path_tracker/package.xml
@@ -14,7 +14,7 @@
 
   <author email="valentin.vergez@gmail.com">Valentin Vergez</author>
 
-  
+
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>actionlib</build_depend>
@@ -26,6 +26,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>common_utils</build_depend>
 
   <run_depend>actionlib</run_depend>
   <run_depend>deplacement_msg</run_depend>
@@ -36,6 +37,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>common_utils</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
