--- a/traitement_image/feu_tricolore/param/roi-001.bag.yaml
+++ b/traitement_image/feu_tricolore/param/roi-001.bag.yaml
@@ -5,13 +5,16 @@ computerVision:
       xmax: 0.30
       ymin: 0.55
       ymax: 0.67
+      threshold: 150
     yellowRoi:
       xmin: 0.21
       xmax: 0.30
       ymin: 0.43
       ymax: 0.54
+      threshold: 210
     redRoi:
       xmin: 0.21
       xmax: 0.30
       ymin: 0.31
       ymax: 0.43
+      threshold: 210
