--- a/traitement_image/feu_tricolore/param/roi-111.bag.yaml
+++ b/traitement_image/feu_tricolore/param/roi-111.bag.yaml
@@ -5,13 +5,16 @@ computerVision:
       xmax: 0.38
       ymin: 0.53
       ymax: 0.62
+      threshold: 150
     yellowRoi:
       xmin: 0.30
       xmax: 0.38
       ymin: 0.45
       ymax: 0.53
+      threshold: 210
     redRoi:
       xmin: 0.30
       xmax: 0.38
       ymin: 0.35
       ymax: 0.44
+      threshold: 210
