--- a/traitement_image/feu_tricolore/param/roi.yaml
+++ b/traitement_image/feu_tricolore/param/roi.yaml
@@ -5,13 +5,16 @@ computerVision:
       xmax: 0.4
       ymin: 0.52
       ymax: 0.60
+      threshold: 150
     yellowRoi:
       xmin: 0.2
       xmax: 0.4
       ymin: 0.35
       ymax: 0.50
+      threshold: 210
     redRoi:
       xmin: 0.2
       xmax: 0.4
       ymin: 0.2
       ymax: 0.33
+      threshold: 210
