--- a/common/common_utils/CMakeLists.txt
+++ b/common/common_utils/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   occupancy_grid_utils
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -127,6 +128,7 @@ add_library(common_utils
   src/controller/Pid.cpp
   src/controller/PidWithAntiWindUp.cpp
   src/RateLimiter.cpp
+  src/RobotPoseSubscriber.cpp
 )
 
 ## Add cmake target dependencies of the library
