--- a/navigation/path_tracker/CMakeLists.txt
+++ b/navigation/path_tracker/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
     rospy
     tf
     common_utils
+    geometry_utils
 )
 
 # Use clang++-3.6 if available
@@ -142,6 +143,8 @@ set_target_properties(grid_obstacles_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++
 
 add_executable(path_tracker_node
     src/path_tracker_node.cpp
+    src/PathFollower.cpp
+    src/BasicFollower.cpp
     src/PathTracking.cpp
     src/SwitchModeBehavior.cpp
 )
