--- a/navigation/final_approach/cfg/custom_rosconsole.conf
+++ b/navigation/final_approach/cfg/custom_rosconsole.conf
@@ -1,7 +1,7 @@
 # Override my package to output everything
 log4j.logger.ros.final_approach = DEBUG
-log4j.logger.ros.final_approach.investigation = INFO
+log4j.logger.ros.final_approach.investigation = DEBUG
 log4j.logger.ros.final_approach.artag = DEBUG
 log4j.logger.ros.final_approach.actionlib = WARN
-log4j.logger.ros.final_approach.segmentConstrutcion = INFO
-log4j.logger.ros.final_approach.objectsConstruction = INFO
+log4j.logger.ros.final_approach.segmentConstruction = DEBUG
+log4j.logger.ros.final_approach.objectsConstruction = DEBUG
