gérer les trois listes de zones ( unknown, explored, notexplored ), manque plus que la fonction getBestZone

--- a/manager/generateur_taches/CMakeLists.txt
+++ b/manager/generateur_taches/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   manager_msg
+  common_utils
 )
 
 ## System dependencies are found with CMake's conventions
@@ -162,21 +163,21 @@ add_dependencies(action_node manager_msg_gencpp)
 set_target_properties(action_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
 
 
-add_executable(sendOrder_node 
+add_executable(sendOrder_node
 	src/sendOrder_node.cpp)
 target_link_libraries(sendOrder_node ${catkin_LIBRARIES})
 add_dependencies(sendOrder_node manager_msg_gencpp)
 set_target_properties(sendOrder_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
 
 
-add_executable(orderListener_node 
+add_executable(orderListener_node
 	src/orderListener_node.cpp)
 target_link_libraries(orderListener_node ${catkin_LIBRARIES})
 add_dependencies(orderListener_node manager_msg_gencpp)
 set_target_properties(orderListener_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
 
 
-add_executable(activityTalker_node 
+add_executable(activityTalker_node
 	src/activityTalker_node.cpp)
 target_link_libraries(activityTalker_node ${catkin_LIBRARIES})
 add_dependencies(activityTalker_node manager_msg_gencpp)
