--- a/manager/generateur_taches/package.xml
+++ b/manager/generateur_taches/package.xml
@@ -46,12 +46,14 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>manager_msg</build_depend>
   <build_depend>common_utils</build_depend>
+  <build_depend>geometry_utils</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>manager_msg</run_depend>
   <run_depend>common_utils</run_depend>
+  <run_depend>geometry_utils</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
