Prise en compte des remarques de la PR #82

--- a/navigation/navigation_manager/package.xml
+++ b/navigation/navigation_manager/package.xml
@@ -49,6 +49,8 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>occupancy_grid_utils</build_depend>
+  <build_depend>common_utils</build_depend>
   <build_depend>tf</build_depend>
 
   <run_depend>actionlib</run_depend>
@@ -60,6 +62,8 @@
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>occupancy_grid_utils</run_depend>
+  <run_depend>common_utils</run_depend>
   <run_depend>tf</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
