--- a/navigation/path_tracker/cfg/navigation_pathTracker.yaml
+++ b/navigation/path_tracker/cfg/navigation_pathTracker.yaml
@@ -15,3 +15,6 @@ navigation:
                 lowLimit: -1
                 upLimit: 1
                 antiWindUp: 0.1
+            SpeedRateLimit:
+                lowLimit: -0.20
+                upLimit: 0.20
