--- a/navigation/path_tracker/package.xml
+++ b/navigation/path_tracker/package.xml
@@ -28,6 +28,7 @@
   <build_depend>tf</build_depend>
   <build_depend>common_utils</build_depend>
   <build_depend>geometry_utils</build_depend>
+  <build_depend>occupancy_grid_utils</build_depend>
 
   <run_depend>actionlib</run_depend>
   <run_depend>deplacement_msg</run_depend>
@@ -40,6 +41,7 @@
   <run_depend>tf</run_depend>
   <run_depend>common_utils</run_depend>
   <run_depend>geometry_utils</run_depend>
+  <run_depend>occupancy_grid_utils</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
