Evitement par calcul de trajectoire fonctionnel :)

--- a/navigation/navigation_manager/CMakeLists.txt
+++ b/navigation/navigation_manager/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   occupancy_grid_utils
   common_utils
   tf
+  topic_tools
 )
 
 ## System dependencies are found with CMake's conventions
