--- a/messages/gripper_msg/CMakeLists.txt
+++ b/messages/gripper_msg/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   message_generation
+  message_runtime
 )
 
 ################################################
