--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -50,7 +50,8 @@
   <build_depend>comm_msg</build_depend>
   <build_depend>deplacement_msg</build_depend>
   <build_depend>common_utils</build_depend>
-
+  <build_depend>geometry_utils</build_depend>
+  
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib</run_depend>
@@ -60,6 +61,7 @@
   <run_depend>comm_msg</run_depend>
   <run_depend>deplacement_msg</run_depend>
   <run_depend>common_utils</run_depend>
+  <run_depend>geometry_utils</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
