Paramétrage plus complexes du detectement

--- a/traitement_image/feu_tricolore/param/roi.yaml
+++ b/traitement_image/feu_tricolore/param/roi.yaml
@@ -1,20 +1,23 @@
 computerVision:
   lightSignalDetection:
+    useBgrInsteadOfHSV: false
+    useChannel: 1
+    invertThresholdCompare: true
     greenRoi:
-      xmin: 0.290
-      xmax: 0.345
-      ymin: 0.42
-      ymax: 0.47
-	  threshold: 150
+      xmin: 0.35
+      xmax: 0.41
+      ymin: 0.63
+      ymax: 0.69
+      threshold: 100
     yellowRoi:
-      xmin: 0.290
-      xmax: 0.345
-      ymin: 0.31
-      ymax: 0.37
-	  threshold: 210
+      xmin: 0.35
+      xmax: 0.41
+      ymin: 0.53
+      ymax: 0.58
+      threshold: 130
     redRoi:
-      xmin: 0.29
-      xmax: 0.345
-      ymin: 0.22
-      ymax: 0.26
-	  threshold: 210
+      xmin: 0.35
+      xmax: 0.41
+      ymin: 0.42
+      ymax: 0.48
+      threshold: 130
