[FA] Approche LIGHT cam paramétrable

--- a/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
+++ b/simulation/gazebo_sim_launch/param/robotino1_navigation.yaml
@@ -22,6 +22,25 @@ navigation:
                 Kd: 0.0
                 threshold: 0.01
                 nbSuccessNeeded: 2.0
+        camAsserv:
+            xPid:
+                Kp: 1.0
+                Ki: 0.0
+                Kd: 0.0
+                threshold: 0.003
+                nbSuccessNeeded: 3.0
+            yPid:
+                Kp: 1.0
+                Ki: 0.0
+                Kd: 0.0
+                threshold: 0.003
+                nbSuccessNeeded: 3.0
+            yawPid:
+                Kp: 0.5
+                Ki: 0.0
+                Kd: 0.0
+                threshold: 0.003
+                nbSuccessNeeded: 3.0
         mps:
             width: 0.700
             targetPoses:
