--- a/traitement_image/feu_tricolore/param/roi-011.bag.yaml
+++ b/traitement_image/feu_tricolore/param/roi-011.bag.yaml
@@ -1,20 +1,24 @@
 computerVision:
   lightSignalDetection:
+    useBgrInsteadOfHSV: true
+    useChannel: 1
+    invertThresholdCompare: false
+    mixedAllChannels: true
     greenRoi:
       xmin: 0.18
       xmax: 0.27
       ymin: 0.53
       ymax: 0.65
-      threshold: 150
+      threshold: 100
     yellowRoi:
       xmin: 0.18
       xmax: 0.27
       ymin: 0.40
       ymax: 0.53
-      threshold: 210
+      threshold: 190
     redRoi:
       xmin: 0.18
       xmax: 0.27
       ymin: 0.295
       ymax: 0.39
-      threshold: 210
+      threshold: 150
