--- a/traitement_image/feu_tricolore/param/roi-111.bag.yaml
+++ b/traitement_image/feu_tricolore/param/roi-111.bag.yaml
@@ -1,20 +1,24 @@
 computerVision:
   lightSignalDetection:
+    useBgrInsteadOfHSV: true
+    useChannel: 1
+    invertThresholdCompare: false
+    mixedAllChannels: true
     greenRoi:
       xmin: 0.30
       xmax: 0.38
       ymin: 0.53
       ymax: 0.62
-      threshold: 150
+      threshold: 100
     yellowRoi:
       xmin: 0.30
       xmax: 0.38
       ymin: 0.45
       ymax: 0.53
-      threshold: 210
+      threshold: 190
     redRoi:
       xmin: 0.30
       xmax: 0.38
       ymin: 0.35
       ymax: 0.44
-      threshold: 210
+      threshold: 150
